--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@ ul {
 .container {
   margin-left: auto;
   margin-right: auto;
-  width: 1230px;
+  width: 1200px;
   padding: 0 15px;
 }
 
@@ -61,10 +61,10 @@ ul {
 
 .site-nav {
   display: flex;
-  padding-left: 93px;
+  margin-left: 93px;
 }
 
-.site-nav .item + .item {
+.site-nav .item-nav + .item-nav {
   margin-left: 50px;
 }
 
@@ -147,13 +147,19 @@ ul {
   border-radius: 4px;
   border: none;
   font-family: inherit;
-  color: var(--main-text-color);
-  background-color: var(--accent-color);
+  color: var(--primary-text-color);
+  background-color: var(--primary-bg-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.06em;
   cursor: pointer;
+}
+
+.button:hover,
+.button:focus {
+  color: var(--main-text-color);
+  background-color: var(--accent-color);
 }
 
 .section {
@@ -163,11 +169,14 @@ ul {
 
 .item-list {
   display: flex;
-  justify-content: space-between;
 }
 
 .item-list .item {
   max-width: 270px;
+}
+
+.item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .title {
@@ -198,7 +207,6 @@ ul {
 
 .work-list {
   display: flex;
-  justify-content: space-between;
 }
 
 .section.team {
@@ -207,7 +215,6 @@ ul {
 
 .cards-list {
   display: flex;
-  justify-content: space-between;
 }
 
 .px-30 {
@@ -302,12 +309,8 @@ ul {
   margin-bottom: 50px;
 }
 
-.filter-list .item + .item {
+.filter-list .item-btn + .item-btn {
   margin-left: 8px;
-}
-
-.p-20-24 {
-  padding: 20px 24px;
 }
 
 .caption {
@@ -328,13 +331,31 @@ ul {
 .list {
   display: flex;
   flex-wrap: wrap;
-  gap: 30px;
-  justify-content: center;
 }
 
 .list .item {
+  margin-right: 30px;
+  margin-bottom: 30px;
   background: #ffffff;
-  border: 1px solid #eeeeee;
+}
+
+.list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+
+img {
+  display: block;
+}
+
+.p-20-24 {
+  padding: 20px 24px;
+  border-bottom: 1px solid #eeeeee;
+  border-left: 1px solid #eeeeee;
+  border-right: 1px solid #eeeeee;
 }
 
 .item-list,
